--- a/templates/login.html
+++ b/templates/login.html
@@ -13,14 +13,14 @@
                 <!--form for processing log in actions-->
                 <form method="POST" action="{{ url_for('login') }}">
                     <div class="row">
-                        <div class="input-field col s12 m10 center-align">
+                        <div class="input-field col s12 m10 center-align reglog">
                             <i class="fas fa-user-alt prefix"></i>
                             <input id="username" name="username" type="text" class="validate">
                             <label for="username">username</label>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s12 m10 center-align">
+                        <div class="input-field col s12 m10 center-align reglog">
                             <i class="fas fa-lock prefix"></i>
                             <input id="password" name="password" type="password" class="validate">
                             <label for="password">password</label>
