--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
-                    <label for="cookbook_name">cookbook name</label>
+                    <label id="add-label" for="cookbook_name">cookbook name</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_chef" name="cookbook_chef" type="text" class="validate">
-                    <label for="cookbook_chef">cookbook chef</label>
+                    <label id="add-label" for="cookbook_chef">cookbook chef</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_image" name="cookbook_image" type="text" class="validate">
-                    <label for="cookbook_image">cookbook image - add Amazon image URL here</label>
+                    <label id="add-label" for="cookbook_image">cookbook image - add Amazon image URL here</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_amazon" name="cookbook_amazon" type="text" class="validate">
-                    <label for="cookbook_amazon">cookbook amazon</label>
+                    <label id="add-label" for="cookbook_amazon">cookbook amazon</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="input-field col s10">
                     <textarea id="cookbook_desc" name="cookbook_desc" type="text" class="validate"></textarea>
-                    <label for="cookbook_desc">cookbook description</label>
+                    <label id="add-label" for="cookbook_desc">cookbook description</label>
                 </div>
                 <div class="col s1"></div>
             </div>
