--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -23,7 +23,7 @@
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
                     </select>
-                    <label for="category_name"></label>
+                    <label id="add-label" for="category_name"></label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_name" name="recipe_name" type="text" class="validate">
-                    <label for="recipe_name">recipe name</label>
+                    <label id="add-label" for="recipe_name">recipe name</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" type="text" class="validate">
-                    <label for="recipe_chef">recipe chef</label>
+                    <label id="add-label" for="recipe_chef">recipe chef</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
-                    <label for="cookbook_name">recipe cookbook</label>
+                    <label id="add-label" for="cookbook_name">recipe cookbook</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" type="text" class="validate">
-                    <label for="recipe_image">recipe image - add URL here</label>
+                    <label id="add-label" for="recipe_image">recipe image - add URL here</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate">
-                    <label for="recipe_difficulty">recipe difficulty</label>
+                    <label id="add-label" for="recipe_difficulty">recipe difficulty</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" type="text" class="validate">
-                    <label for="recipe_time">recipe time</label>
+                    <label id="add-label" for="recipe_time">recipe time</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
                     <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <label for="recipe_ingredients">ingredients</label>
+                    <label id="add-label" for="recipe_ingredients">ingredients</label>
                 </div>
             </div>
             <!--add extra recipe ingredients button-->
@@ -116,7 +116,7 @@
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     <textarea id="recipe_method" type="text" name="recipe_method"></textarea>
-                    <label for="recipe_method">method</label>
+                    <label id="add-label" for="recipe_method">method</label>
                 </div>
             </div>
             <!--add extra recipe method textarea-->
