--- a/templates/starters.html
+++ b/templates/starters.html
@@ -17,7 +17,7 @@
             <div class="card ">
                 <!--Materialize card structure - clickable image to activate reveal-->
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_image }}">
+                    <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_name }}">
                 </div>
                 <!--Materialize card structure - text below image-->
                 <div class="card-content center-align">
