--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -15,7 +15,7 @@
         </div>
         <!--col with image and recipe info-->
         <div class="col s12 xl4 center-align">
-            <img class="show-img" src="{{ recipe.recipe_image }}" alt="{{recipe.recipe_name}}"><br>
+            <img class="show-img" src="{{ recipe.recipe_image }}" alt="image of {{recipe.recipe_name}}"><br>
             <hr>
             <div class="col s4">
                 <span class="left">Category: </span>
