--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -42,10 +42,10 @@
             <div class="card ">
                 <!--Materialize card structure - image and FAB-->
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ recipe.recipe_image }}">
+                    <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_name }}"">
                 </div>
-                <div class="card-content center-align">
-                    <p class="card-title activator" id="rec-style">{{ recipe.recipe_name }}<i
+                <div class=" card-content center-align">
+                    <p class="card-title activator rec-style">{{ recipe.recipe_name }}<i
                             class="material-icons right"></i></p>
                     <p>added by {{ recipe.recipe_added}}</p>
                     <hr>
