removed extra " on line 45 of recipes.html

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -42,7 +42,7 @@
             <div class="card ">
                 <!--Materialize card structure - image and FAB-->
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_name }}"">
+                    <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_name }}">
                 </div>
                 <div class=" card-content center-align">
                     <p class="card-title activator rec-style">{{ recipe.recipe_name }}<i
