removed stray closing span from cookbooks.html

--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -48,7 +48,7 @@
                 <div class="card-content center-align">
                     <div class="row">
                         <span class="card-title activator rec-style"></span>{{ cookbook.cook_name }}<i
-                            class="right"></i></span>
+                            class="right"></i>
                         <span class="card-title-book" id="rec-style">{{ cookbook.cookbook_name }}</span>
                         <p class="book-chef">by {{ cookbook.cookbook_chef }}</p>
                         <hr>
