--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -13,55 +13,55 @@
             <!--add cookbook name-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-bread-slice fa-2x" id="icon"></i>
+                    <i class="fas fa-bread-slice fa-2x icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
-                    <label id="add-label" for="cookbook_name">cookbook name</label>
+                    <label class="add-label" for="cookbook_name">cookbook name</label>
                 </div>
                 <div class="col s1"></div>
             </div>
             <!--add cookbook chef-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user fa-2x" id="icon"></i>
+                    <i class="fas fa-user fa-2x icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_chef" name="cookbook_chef" type="text" class="validate">
-                    <label id="add-label" for="cookbook_chef">cookbook chef</label>
+                    <label class="add-label" for="cookbook_chef">cookbook chef</label>
                 </div>
                 <div class="col s1"></div>
             </div>
             <!--add cookbook image page URL from Amazon-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-book fa-2x" id="icon"></i>
+                    <i class="fas fa-book fa-2x icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_image" name="cookbook_image" type="text" class="validate">
-                    <label id="add-label" for="cookbook_image">cookbook image - add Amazon image URL here</label>
+                    <label class="add-label" for="cookbook_image">cookbook image - add Amazon image URL here</label>
                 </div>
                 <div class="col s1"></div>
             </div>
             <!--add cookbook Amazon page URL-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-camera fa-2x" id="icon"></i>
+                    <i class="fas fa-camera fa-2x icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_amazon" name="cookbook_amazon" type="text" class="validate">
-                    <label id="add-label" for="cookbook_amazon">cookbook amazon</label>
+                    <label class="add-label" for="cookbook_amazon">cookbook amazon</label>
                 </div>
                 <div class="col s1"></div>
             </div>
             <!--add cookbook description-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list fa-2x" id="icon"></i>
+                    <i class="fas fa-list fa-2x icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <textarea id="cookbook_desc" name="cookbook_desc" type="text" class="validate"></textarea>
-                    <label id="add-label" for="cookbook_desc">cookbook description</label>
+                    <label class="add-label" for="cookbook_desc">cookbook description</label>
                 </div>
                 <div class="col s1"></div>
             </div>
