removed invalid type from textarea and stray </div>

--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -60,7 +60,7 @@
                     <i class="fas fa-list fa-2x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <textarea id="cookbook_desc" name="cookbook_desc" type="text" class="validate"></textarea>
+                    <textarea id="cookbook_desc" name="cookbook_desc" class="validate"></textarea>
                     <label class="add-label" for="cookbook_desc">cookbook description</label>
                 </div>
                 <div class="col s1"></div>
@@ -71,9 +71,8 @@
                     <button class="btn" type="submit">add cookbook</button>
                 </div>
             </div>
+        </form>
     </div>
-    </form>
-</div>
 </div>
 
 {% endblock %}
